--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="card">
-            <h1>Witam piękna 😏</h1>
+            <h1>Witam  😏</h1>
             <img src="bun_36.png" alt="Serce" class="bunny-img">
             <p>Pójdziesz ze mną na randkę? 💖</p>
             <div class="buttons">
